# LightSaber

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
docs/: Doxyfile.in
resources/datasets/google-cluster-data/: google-cluster-data.txt
resources/datasets/lrb/: lrb-data-small-ht.txt
resources/datasets/manufacturing_equipment/: DEBS2012-small.txt
resources/datasets/smartgrid/: smartgrid-data.txt
scripts/: build.sh  prepare-software.sh
scripts/lightsaber-bench/: run-benchmarks-lightsaber.sh
scripts/scabbard-bench/other/: run-checkpoint-only-benchmarks-different-confs.sh  run-scalability-benchmarks.sh
scripts/scabbard-bench/paper/: run-adaptive-benchmarks-FIG12.sh  run-aws-gp3-benchmarks-FIG14.sh  run-benchmarks-FIG7.sh  run-breakdown-benchmarks-FIG11.sh  run-checkpoint-only-benchmarks-TABLE4.sh  run-flink-benchmarks-FIG9.sh  run-ingestion-only-benchmarks-FIG8.sh  run-kafka-benchmarks-FIG9.sh  run-rdma-benchmarks-FIG13.sh  run-recovery-benchmarks-FIG10.sh
scripts/utils/: memcheck.sh  run_with_huge_pages.sh
src/: CMakeLists.txt  main.cpp
src/RDMA/infinity/: infinity.h
src/RDMA/infinity/core/: Configuration.h  Context.cpp  Context.h
src/RDMA/infinity/memory/: Atomic.h  Buffer.cpp  Buffer.h  Region.cpp  Region.h  RegionToken.cpp  RegionToken.h  RegisteredMemory.cpp  RegisteredMemory.h
src/RDMA/infinity/queues/: QueuePair.cpp  QueuePair.h  QueuePairFactory.cpp  QueuePairFactory.h
src/RDMA/infinity/requests/: RequestToken.h
src/RDMA/infinity/utils/: Address.cpp
src/buffers/: CircularQueryBuffer.h  NUMACircularQueryBuffer.h  NumaBuffer.h  PartialWindowResults.h  PartialWindowResultsFactory.h  PersistentCircularQueryBuffer.h  PersistentNumaCircularQueryBuffer.h  QueryBuffer.h  RDMABufferPool.h  UnboundedQueryBuffer.h  UnboundedQueryBufferFactory.h
src/checkpoint/: BlockManager.cpp  BlockManager.h  Checkpoint.h  CheckpointStatistics.h  FileBackedCheckpointCoordinator.cpp  FileBackedCheckpointCoordinator.h  LineageGraph.cpp  LineageGraph.h  LineageGraphFactory.h  Recovery.h
src/compression/: CompressionCodeGenUtils.cpp  CompressionCodeGenUtils.h  CompressionStatistics.cpp  CompressionStatistics.h  Compressor.h  Zigzag.h
src/cql/expressions/: ColumnReference.h  Expression.cpp  Expression.h  FloatConstant.h  IntConstant.h  LongConstant.h  LongLongConstant.h
src/cql/expressions/operations/: Addition.h  Division.h  Multiplication.h  Subtraction.h
src/cql/operators/: AggregateOperatorCode.h  Aggregation.h  AggregationType.h  HashFunctions.h  HashTable.h  NoOp.h  OperatorCode.h  Projection.h  Selection.h  StaticHashJoin.h  ThetaJoin.h
src/cql/operators/codeGeneration/: AggregationTree.h  GeneralAggregationGraph.h  OperatorJit.cpp  OperatorJit.h  OperatorKernel.h
src/cql/predicates/: ANDPredicate.h  ComparisonPredicate.h  ORPredicate.h  Predicate.h
src/dispatcher/: ITaskDispatcher.cpp  ITaskDispatcher.h  JoinTaskDispatcher.cpp  JoinTaskDispatcher.h  TaskDispatcher.cpp  TaskDispatcher.h
src/filesystem/: File.cpp  File.h  FileSystemDisk.h  NullDisk.h
src/monitors/: CompressionMonitor.cpp  CompressionMonitor.h  LatencyMonitor.cpp  LatencyMonitor.h  Measurement.cpp  Measurement.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ThroughputMonitor.cpp  ThroughputMonitor.h
src/processor/: TaskProcessor.cpp  TaskProcessor.h  TaskProcessorPool.h
src/result/: PartialResultSlot.h  ResultHandler.cpp  ResultHandler.h
src/tasks/: ConcurrentQueue.h  NumaTaskQueueWrapper.cpp  NumaTaskQueueWrapper.h  Task.cpp  Task.h  TaskFactory.h  WindowBatch.cpp  WindowBatch.h  WindowBatchFactory.h
src/utils/: Async.h  AttributeType.cpp  AttributeType.h  Channel.h  Guid.h  NumaAllocator.h  PaddedInt.h  PaddedLong.h  Query.cpp  Query.h  QueryApplication.cpp  QueryApplication.h  QueryConfig.h  QueryOperator.h  Status.h  SystemConf.cpp  SystemConf.h  TupleSchema.h  Utils.cpp  Utils.h  WindowDefinition.h
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt
test/benchmarks/applications/: BenchmarkQuery.h  CMakeLists.txt
test/benchmarks/applications/ClusterMonitoring/: CM1.cpp  CM2.cpp  ClusterMonitoring.h  main.cpp
test/benchmarks/applications/LinearRoadBenchmark/: LRB1.cpp  LRB2.cpp  LinearRoadBenchmark.h  main.cpp
test/benchmarks/applications/ManufacturingEquipment/: ME1.cpp  ManufacturingEquipment.h  main.cpp
test/benchmarks/applications/Nexmark/: NBQ5.cpp  Nexmark.h
test/benchmarks/applications/RemoteBenchmark/: remoteRDMASink.cpp  remoteRDMASource.cpp  remoteSink.cpp  remoteSource.cpp
test/benchmarks/applications/RemoteBenchmark/RDMA/: CMakeLists.txt
test/benchmarks/applications/RemoteBenchmark/RDMA/examples/: send-performance.cpp
test/benchmarks/applications/SmartGrid/: SG1.cpp  SG2.cpp  SG3.cpp  SmartGrid.h  main.cpp
test/benchmarks/applications/YahooBenchmark/: YSB.cpp  YahooBenchmark.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/: CMakeLists.txt
test/benchmarks/applicationsWithCheckpoints/ClusterMonitoring/: CM1.cpp  CM2.cpp  ClusterMonitoring.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/LinearRoadBenchmark/: LRB1.cpp  LRB2.cpp  LRB3.cpp  LinearRoadBenchmark.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/ManufacturingEquipment/: ME1.cpp  ManufacturingEquipment.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/Nexmark/: NBQ5.cpp  Nexmark.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/SmartGrid/: SG1.cpp  SG2.cpp  SG3.cpp  SmartGrid.h  main.cpp
test/benchmarks/applicationsWithCheckpoints/YahooBenchmark/: YSB.cpp  main.cpp
test/benchmarks/kafka-flink/: BenchmarkUtils.h  CMakeLists.txt  Flink.h  Kafka.h  main.cpp  mainKafka.cpp
test/benchmarks/kafka-flink/queues/: atomicops.h  readerwritercircularbuffer.h  readerwriterqueue.h
test/benchmarks/microbenchmarks/: CMakeLists.txt  RandomDataGenerator.h  TestAggregation.cpp  TestGAG.cpp  TestJoin.cpp  TestPersistentAggregation.cpp  TestPersistentProjection.cpp  TestProjection.cpp  TestSelection.cpp
test/unit_tests/: CMakeLists.txt  checkpoint.cpp  datastructures.cpp  internals.cpp  main.cpp  operators.cpp
